--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Це тобі киць</title>
+  <!-- Підключення CSS -->
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="index.css">
-
+  <!-- Забезпечення сумісності з мобільними пристроями -->
+  <meta name="description" content="Сторінка з текстом 'Це тобі киць' та анімованим фоном">
+  <meta name="author" content="Твоє ім'я">
 </head>
 <body>
   <div class="background">
