--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Це тобі киць</title>
-  <!-- Підключення CSS -->
+  <title>Це тобі, киць</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Забезпечення сумісності з мобільними пристроями -->
-  <meta name="description" content="Сторінка з текстом 'Це тобі киць' та анімованим фоном">
-  <meta name="author" content="Твоє ім'я">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="background">
     <h1 class="animated-text">Це тобі, киць!</h1>
+    <div class="heart"></div>
   </div>
 </body>
 </html>
